[gd_scene load_steps=7 format=2]

[ext_resource path="res://asset/texture/ui/plant_check_ui.png" type="Texture" id=1]
[ext_resource path="res://fonts/Merriweather-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/scripts/PlantCheckMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 28
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[node name="PlantCheckMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
mouse_default_cursor_shape = 1
script = ExtResource( 3 )

[node name="Book" type="Control" parent="."]
margin_right = 1150.0
margin_bottom = 368.0

[node name="TextureRect" type="TextureRect" parent="Book"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -130.0
texture = ExtResource( 1 )
expand = true

[node name="PlantName" type="Label" parent="Book"]
margin_left = 61.0
margin_top = 29.0
margin_right = 660.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( -294, -54 )
custom_colors/font_color = Color( 0.352941, 0.258824, 0.254902, 1 )
custom_fonts/font = SubResource( 1 )
text = "someplant"
align = 1
valign = 1

[node name="OterInfo" type="Label" parent="Book"]
margin_left = 73.0
margin_top = 86.0
margin_right = 618.0
margin_bottom = 329.0
rect_pivot_offset = Vector2( -294, -54 )
custom_colors/font_color = Color( 0.352941, 0.258824, 0.254902, 1 )
custom_fonts/font = SubResource( 2 )
autowrap = true

[node name="SampleLabel" type="Label" parent="Book"]
visible = false
margin_left = 718.0
margin_top = 52.0
margin_right = 928.0
margin_bottom = 312.0
custom_colors/font_color = Color( 0.352941, 0.258824, 0.254902, 1 )
custom_fonts/font = SubResource( 2 )
text = "you have to learn a sample on research table to get some more information..."
autowrap = true

[node name="InteractOptions" type="VBoxContainer" parent="Book"]
margin_left = 720.0
margin_top = 60.0
margin_right = 918.0
margin_bottom = 307.0

[node name="CollectMaterials" type="Button" parent="Book/InteractOptions"]
margin_right = 198.0
margin_bottom = 32.0
custom_colors/font_color_disabled = Color( 0.352941, 0.258824, 0.254902, 1 )
custom_colors/font_color_focus = Color( 0.352941, 0.258824, 0.254902, 1 )
custom_colors/font_color = Color( 0.352941, 0.258824, 0.254902, 1 )
custom_colors/font_color_hover = Color( 0.780392, 0.345098, 0.32549, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.211765, 0.207843, 1 )
custom_fonts/font = SubResource( 3 )
text = "> collect materials"
flat = true
align = 0

[node name="CheckStatus" type="Button" parent="Book/InteractOptions"]
margin_top = 36.0
margin_right = 198.0
margin_bottom = 68.0
custom_colors/font_color_disabled = Color( 0.352941, 0.258824, 0.254902, 1 )
custom_colors/font_color_focus = Color( 0.352941, 0.258824, 0.254902, 1 )
custom_colors/font_color = Color( 0.352941, 0.258824, 0.254902, 1 )
custom_colors/font_color_hover = Color( 0.780392, 0.345098, 0.32549, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.211765, 0.207843, 1 )
custom_fonts/font = SubResource( 3 )
text = "> check status"
flat = true
align = 0

[connection signal="pressed" from="Book/InteractOptions/CollectMaterials" to="." method="_on_CollectMaterials_pressed"]
[connection signal="pressed" from="Book/InteractOptions/CheckStatus" to="." method="_on_CheckStatus_pressed"]
